[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pkblast"
authors = [{name = "KOLANICH"}]
description = "Python bindings to Mark Adler's libblast which is a free open-source implementation of a decompressor for PKWare Data Compression Library (DCL) compression format."
readme = "ReadMe.md"
keywords = ["blast", "PKWare", "bindings", "compression", "DCL", "implode"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.optional-dependencies]
test = ["fileTestSuite @ https://github.com/fileTestSuite/fileTestSuite.py"]

[project.urls]
Homepage = "https://github.com/implode-compression-impls/pkblast.py"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
