[metadata]
name = pkblast
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH-libs/pkblast.py
description = Python bindings to Mark Adler's libblast which is a free open-source implementation of a decompressor for PKWare Data Compression Library (DCL) compression format.
long_description = file: ReadMe.md
keywords = blast, PKWare, bindings, compression, DCL, implode
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_requires = fileTestSuite @ https://github.com/fileTestSuite/fileTestSuite.py
